Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Adding the 'application/docbook+xml' official mime type
Bug fixes:
~~~~~~~~~~
- Fill in cps_suffix_map to differentiate a double extension containing xml.
- Docbook format is not binary
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-